[package]
name = "suho"
version = "0.1.0"
edition = "2024"
description = "Label-driven L3/L4 network-policy controller for Docker"
license = "GPL-3.0-or-later"
repository = "https://github.com/davidborzek/suho"
homepage = "https://github.com/davidborzek/suho"
readme = "README.md"
rust-version = "1.85"
keywords = ["nftables", "docker", "firewall", "networkpolicy", "container"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
anyhow = "1.0.104"
axum = "0.8"
bollard = "0.21.0"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3.33"
ipnetwork = "0.21"
prometheus-client = "0.22"
rustables = "=0.8.8"
schemars = "1.2.1"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
serde_yaml_ng = "0.10.0"
tokio = { version = "1.53.1", features = ["rt-multi-thread", "macros", "signal", "time", "net"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
